--- a/appspec.yml
+++ b/appspec.yml
@@ -11,8 +11,8 @@ hooks:
   ApplicationStart:
     - location: scripts/start.sh
       timeout: 300
-      runas: play-app
+      runas: root
   ApplicationStop:
     - location: scripts/stop.sh
       timeout: 300
-      runas: play-app
+      runas: root
