--- a/appspec.yml
+++ b/appspec.yml
@@ -7,12 +7,12 @@ hooks:
   BeforeInstall:
     - location: scripts/cleanup.sh
       timeout: 300
-      runas: play-app
+      runas: root
   Install:
     - location: scripts/install.sh
       timeout: 300
-      runas: play-app
+      runas: root
   ApplicationStart:
     - location: scripts/start.sh
       timeout: 300
-      runas: play-app
+      runas: root
