--- a/appspec.yml
+++ b/appspec.yml
@@ -8,7 +8,7 @@ hooks:
     - location: scripts/cleanup.sh
       timeout: 300
       runas: root
-  Install:
+  AfterInstall:
     - location: scripts/install.sh
       timeout: 300
       runas: root
